<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View_page">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_txt"
        android:textSize="25sp"
        android:gravity="center"
        tools:ignore="MissingConstraints" />
    <TableLayout

        android:id="@+id/tabla_cuerpo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/trserialno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:padding="5dp"
                android:text="@string/no_data"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <TextView
                android:id="@+id/acno_pva_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/no_data"
                android:textSize="25sp"
                android:padding="25dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>



        <TableRow
            android:id="@+id/trdistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:textSize="25sp"
                android:text="@string/district"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/no_data"
                android:textSize="25sp"
                android:padding="25dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/trState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/State_txt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <TextView
                android:id="@+id/gender_pva_txt"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:layout_height="wrap_content"
                android:hint="@string/no_data"
                android:padding="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/trlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="25sp"
                android:layout_weight="0.9"
                android:text="@string/location_txt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <TextView
                android:id="@+id/dept_pva_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:hint="@string/no_data"
                android:padding="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>



    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>